@@ -885,5 +885,8 @@ UPDATE gibboni18n SET active='Y' WHERE code='zh_CN';end
 ALTER TABLE `gibboni18n` DROP `maintainerName`, DROP `maintainerWebsite`;end
 UPDATE gibbonSetting SET description='Should department information be made available to the public, via the Gibbon homepage?' WHERE scope='Departments' AND name='makeDepartmentsPublic';end
 UPDATE gibbonAction SET URLList='attendance_take_byPerson_edit.php,attendance_take_byPerson_delete.php' WHERE name='Manage Attendance Logs' AND gibbonModuleID=(SELECT gibbonModuleID FROM gibbonModule WHERE name='Attendance');end
+INSERT INTO `gibbonAction` (`gibbonModuleID`, `name`, `precedence`, `category`, `description`, `URLList`, `entryURL`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES ((SELECT gibbonModuleID FROM gibbonModule WHERE name='User Admin'), 'Import Staff', 0, 'Import', 'Allows bulk import of staff records.', 'import_staff.php', 'import_staff.php', 'Y', 'N', 'N', 'N', 'N', 'Y', 'N', 'N', 'N') ;end
+INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`) VALUES (NULL , '1', (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='User Admin' AND gibbonAction.name='Import Staff'));end
+
 
 ";
