@@ -59,6 +59,7 @@ v16.0.00
 		User Admin: fixed bug preventing some family links from showing up in Manage Users
 		User Admin: removed Back link from child and adult delete modals in Manage Families
 		User Admin: tweaked user CLI to better handle parents in multiple families
+		User Admin: added staff import feature
 
 v15.0.00
 --------
